--- a/RapidViewer.DXF/RapidViewer.DXF.csproj
+++ b/RapidViewer.DXF/RapidViewer.DXF.csproj
@@ -35,11 +35,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AnyCAD.Foundation.Net, Version=20.2122.0.0, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=MSIL">
-      <HintPath>packages\AnyCAD.Rapid.Net.2020.9.4\lib\net40\AnyCAD.Foundation.Net.dll</HintPath>
+    <Reference Include="AnyCAD.Foundation.Net, Version=21.5.14.942, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=MSIL">
+      <HintPath>packages\AnyCAD.Rapid.Net.2021.5.20\lib\net40\AnyCAD.Foundation.Net.dll</HintPath>
     </Reference>
-    <Reference Include="AnyCAD.WinForms.Net, Version=20.2122.0.0, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=MSIL">
-      <HintPath>packages\AnyCAD.Rapid.Net.2020.9.4\lib\net40\AnyCAD.WinForms.Net.dll</HintPath>
+    <Reference Include="AnyCAD.WinForms.Net, Version=21.5.14.942, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=MSIL">
+      <HintPath>packages\AnyCAD.Rapid.Net.2021.5.20\lib\net40\AnyCAD.WinForms.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="AnyCAD.WPF.Net, Version=21.5.14.942, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\AnyCAD.Rapid.Net.2021.5.20\lib\net40\AnyCAD.WPF.Net.dll</HintPath>
     </Reference>
     <Reference Include="netDxf, Version=2.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\netDXF.2.2.0.1\lib\net45\netDxf.dll</HintPath>
@@ -92,11 +95,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\AnyCAD.Rapid.Net.2020.9.4\build\net\AnyCAD.Rapid.Net.targets" Condition="Exists('packages\AnyCAD.Rapid.Net.2020.9.4\build\net\AnyCAD.Rapid.Net.targets')" />
+  <Import Project="packages\AnyCAD.Rapid.Net.2021.5.20\build\net\AnyCAD.Rapid.Net.targets" Condition="Exists('packages\AnyCAD.Rapid.Net.2021.5.20\build\net\AnyCAD.Rapid.Net.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\AnyCAD.Rapid.Net.2020.9.4\build\net\AnyCAD.Rapid.Net.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\AnyCAD.Rapid.Net.2020.9.4\build\net\AnyCAD.Rapid.Net.targets'))" />
+    <Error Condition="!Exists('packages\AnyCAD.Rapid.Net.2021.5.20\build\net\AnyCAD.Rapid.Net.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\AnyCAD.Rapid.Net.2021.5.20\build\net\AnyCAD.Rapid.Net.targets'))" />
   </Target>
 </Project>
