--- a/RapidViewer.DXF/RapidViewer.DXF.csproj
+++ b/RapidViewer.DXF/RapidViewer.DXF.csproj
@@ -8,12 +8,13 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>RapidViewer.DXF</RootNamespace>
     <AssemblyName>RapidViewer.DXF</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,14 +36,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AnyCAD.Foundation.Net, Version=21.5.14.942, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=MSIL">
-      <HintPath>packages\AnyCAD.Rapid.Net.2021.5.20\lib\net40\AnyCAD.Foundation.Net.dll</HintPath>
+    <Reference Include="AnyCAD.Foundation.NET4, Version=2023.3.6.1549, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=MSIL">
+      <HintPath>packages\AnyCAD.Foundation.NET.2023.3.6.1549\lib\net48\AnyCAD.Foundation.NET4.dll</HintPath>
     </Reference>
-    <Reference Include="AnyCAD.WinForms.Net, Version=21.5.14.942, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=MSIL">
-      <HintPath>packages\AnyCAD.Rapid.Net.2021.5.20\lib\net40\AnyCAD.WinForms.Net.dll</HintPath>
+    <Reference Include="AnyCAD.WinForms.NET4, Version=2023.3.6.1549, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=MSIL">
+      <HintPath>packages\AnyCAD.Rapid.NET.2023.3.6.1549\lib\net48\AnyCAD.WinForms.NET4.dll</HintPath>
     </Reference>
-    <Reference Include="AnyCAD.WPF.Net, Version=21.5.14.942, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\AnyCAD.Rapid.Net.2021.5.20\lib\net40\AnyCAD.WPF.Net.dll</HintPath>
+    <Reference Include="AnyCAD.WPF.NET4, Version=2023.3.6.1549, Culture=neutral, PublicKeyToken=adad17ef48f32d48, processorArchitecture=MSIL">
+      <HintPath>packages\AnyCAD.Rapid.NET.2023.3.6.1549\lib\net48\AnyCAD.WPF.NET4.dll</HintPath>
     </Reference>
     <Reference Include="netDxf, Version=2.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\netDXF.2.2.0.1\lib\net45\netDxf.dll</HintPath>
@@ -79,6 +80,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -95,11 +97,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\AnyCAD.Rapid.Net.2021.5.20\build\net\AnyCAD.Rapid.Net.targets" Condition="Exists('packages\AnyCAD.Rapid.Net.2021.5.20\build\net\AnyCAD.Rapid.Net.targets')" />
+  <Import Project="packages\AnyCAD.Foundation.NET.2023.3.6.1549\build\net\AnyCAD.Foundation.NET.targets" Condition="Exists('packages\AnyCAD.Foundation.NET.2023.3.6.1549\build\net\AnyCAD.Foundation.NET.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+      <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\AnyCAD.Rapid.Net.2021.5.20\build\net\AnyCAD.Rapid.Net.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\AnyCAD.Rapid.Net.2021.5.20\build\net\AnyCAD.Rapid.Net.targets'))" />
+    <Error Condition="!Exists('packages\AnyCAD.Foundation.NET.2023.3.6.1549\build\net\AnyCAD.Foundation.NET.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\AnyCAD.Foundation.NET.2023.3.6.1549\build\net\AnyCAD.Foundation.NET.targets'))" />
   </Target>
 </Project>
