--- a/RapidViewer.DXF/packages.config
+++ b/RapidViewer.DXF/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AnyCAD.Rapid.Net" version="2021.5.20" targetFramework="net472" />
+  <package id="AnyCAD.Foundation.NET" version="2023.3.6.1549" targetFramework="net48" />
+  <package id="AnyCAD.Rapid.NET" version="2023.3.6.1549" targetFramework="net48" />
   <package id="netDXF" version="2.2.0.1" targetFramework="net472" />
 </packages>
