--- a/AnyDraw.IO/AnyDraw.IO.csproj
+++ b/AnyDraw.IO/AnyDraw.IO.csproj
@@ -7,7 +7,7 @@
     <BaseOutputPath>..\bin\</BaseOutputPath>
   </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="AnyCAD.Platform.NET" Version="2023.10.28.1225" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AnyCAD.AppFramework.NET" Version="2023.10.24.1026" />
+  </ItemGroup>
 </Project>
