--- a/AnyDraw.IO/AnyDraw.IO.csproj
+++ b/AnyDraw.IO/AnyDraw.IO.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
@@ -8,6 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AnyCAD.AppFramework.NET" Version="2023.10.24.1026" />
+    <PackageReference Include="AnyCAD.AppFramework.NET" Version="2024.1.1.1124" />
   </ItemGroup>
 </Project>
