--- a/RapidViewer.DXF/packages.config
+++ b/RapidViewer.DXF/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AnyCAD.Foundation.NET" version="2023.7.28.918" targetFramework="net48" />
-  <package id="AnyCAD.Foundation.Win32" version="2023.7.28.918" targetFramework="net48" />
-  <package id="AnyCAD.Rapid.NET" version="2023.7.28.918" targetFramework="net48" />
+  <package id="AnyCAD.Foundation.NET" version="2024.3.1.936" targetFramework="net48" />
+  <package id="AnyCAD.Foundation.Win64" version="2024.3.1.936" targetFramework="net48" />
+  <package id="AnyCAD.Platform.NET" version="2024.3.1.936" targetFramework="net48" />
+  <package id="AnyCAD.Rapid.NET" version="2024.3.1.936" targetFramework="net48" />
+  <package id="AnyCAD.Simulate.NET" version="2024.3.1.936" targetFramework="net48" />
   <package id="netDXF" version="2.2.0.1" targetFramework="net472" />
 </packages>
