增加排料角度和间距设置

--- a/AnyDraw/AnyDraw.csproj
+++ b/AnyDraw/AnyDraw.csproj
@@ -34,4 +34,9 @@
   <ItemGroup>
     <Resource Include="logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="AnyNest.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
