--- a/AnyDraw/AnyDraw.csproj
+++ b/AnyDraw/AnyDraw.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AnyCAD.AppFramework.NET" Version="2024.4.15.1505" />
+    <PackageReference Include="AnyCAD.UIFramework.NET" Version="2024.5.1.1040" />
     <PackageReference Include="AnyCAD.UX" Version="1.0.2" />
 	<PackageReference Include="Dirkster.AvalonDock" Version="4.72.1" />
 	<PackageReference Include="Dirkster.AvalonDock.Themes.VS2013" Version="4.72.1" />
